--- a/reading-counter.html
+++ b/reading-counter.html
@@ -59,6 +59,11 @@
             transform: scale(1.2);
         }
 
+        .counter-container {
+            width: 60px;
+            text-align: center;
+        }
+
         .github {
             display: flex;
             justify-content: center;
